HTML and basic CSS added.

--- a/index.html
+++ b/index.html
@@ -3,17 +3,29 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Website title</title>
+   <title>Tic Tac Toe Game</title>
+   <link rel="preconnect" href="https://fonts.gstatic.com">
+   <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;700&display=swap" rel="stylesheet">
    <link rel="stylesheet" href="./style.css">
 </head> 
 <body class="site">
-   <main class="site-content">
-
-
+   <main class="site__content">   
+      <h1 class="pageTitle">Tic Tac Toe Game</h1>
+      <div class="board">
+         <div class="board__box">o</div>
+         <div class="board__box">o</div>
+         <div class="board__box">x</div>
+         <div class="board__box">o</div>
+         <div class="board__box">x</div>
+         <div class="board__box">x</div>
+         <div class="board__box">o</div>
+         <div class="board__box">o</div>
+         <div class="board__box">x</div>
+      </div>
    </main>
 
    <footer>
-      <a href="https://github.com/AdamLoksa" target="blank" class="footer-link"><img src="./img/github_logo.png" alt=""></a>
+      <a href="https://github.com/AdamLoksa" target="blank" class="footer__link"><img src="./img/github_logo.png" alt=""></a>
    </footer>
 
    <script type="text/javascript" src="./app.js"></script>
