Game UI created

--- a/index.html
+++ b/index.html
@@ -11,18 +11,24 @@
 <body class="site">
    <main class="site__content">   
       <h1 class="pageTitle">Tic Tac Toe Game</h1>
-      <div class="board">
-         <div class="board__box">o</div>
-         <div class="board__box">o</div>
-         <div class="board__box">x</div>
 
-         <div class="board__box">o</div>
-         <div class="board__box">x</div>
-         <div class="board__box">x</div>
+      <div class="board">
+         <div class="board__box border-right border-bottom">o</div>
+         <div class="board__box border-right border-bottom">o</div>
+         <div class="board__box border-bottom">x</div>
+
+         <div class="board__box border-right border-bottom">o</div>
+         <div class="board__box border-right border-bottom">x</div>
+         <div class="board__box border-bottom">x</div>
          
-         <div class="board__box">o</div>
-         <div class="board__box">o</div>
+         <div class="board__box border-right">o</div>
+         <div class="board__box border-right">o</div>
          <div class="board__box">x</div>
+      </div>
+
+      <div class="btns">
+         <a href="#" class="btn btn--reset">Reset</a>
+         <a href="#" class="btn btn--mode">Player vs. Computer</a>
       </div>
    </main>
 
