--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head> 
 <body class="site">
    <main class="site__content">   
-      <h1 class="page-title">Tic Tac Toe Game vs. AI</h1>
+      <h1 class="page-title">Tic Tac Toe Game</h1>
 
       <div class="board">
          <div data-board="position-0" class="board__box board__box--hover border-right border-bottom"></div>
@@ -27,7 +27,7 @@
       </div>
 
       <div class="btns">
-         <a href="#" class="btn btn--mode">Choose difficulty</a>
+         <!-- <a href="#" class="btn btn--mode">Choose difficulty</a> -->
          <a href="#" class="btn btn--reset">Start again</a>
       </div>
 
